app: fix overlapping flexbox in top nav on iOS Mobile Safari

--- a/app/web_modules/sourcegraph/repo/styles/Repo.css
+++ b/app/web_modules/sourcegraph/repo/styles/Repo.css
@@ -7,6 +7,10 @@
 .nav {
 	composes: context from GlobalNav;
 }
+.nav > span {
+	display: inline-block;
+	flex: 0 0 auto;
+}
 .repoName {
 	composes: b db mr3 from base;
 }
